# q2_2025_chat_project_team_2

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json  ClientHTTP.h  LibDB_ReadMe.md  README.md  Server_DB_integration.md  commands4build.txt  conanfile.txt  main.cpp  tree.txt
How_make_release_and_debug/: CMakeLists.txt  ReadMe.md  conanfile_debug.txt  conanfile_release.txt
common/add_struct/: General.h  add_struct.h  common_struct.h
common/chat_server_lib/: CMakeLists.txt
common/chat_server_lib/include/: Logger.h  Server.h
common/chat_server_lib/src/: Clnt.h  Server.cpp
common/config/: config.h
common/database/: database.cpp  database.h
common/gui/: BBCodeUtils.cpp  BBCodeUtils.h  ConfigManager.cpp  ConfigManager.h  ListSelectionDialog.cpp  ListSelectionDialog.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  RegisterDialog.cpp  RegisterDialog.h
common/libdb/: CMakeLists.txt  conanfile.txt
common/libdb/include/: db.hpp  logger.hpp  time_utils.hpp
common/libdb/src/: db.cpp  stmt.hpp  time_utils.hpp
common/libdb/test/: main.cpp  main.cppcopy  server_tests.cpp  test.cpp
common/ssl/: ssl.cpp  ssl.h
resources/: icon.icns
src/client/: ChatClient.cpp  ChatClient.h  ClientApp.cpp  ClientApp.h  ClientHTTP.h  main.cpp
src/server/: ClientHTTP.h  Clnt.h  General.h  Logger.h  README.md  Server.cpp  Server.h  json.h  main.cpp
